# Lebne

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.crowd.yml  docker-compose.yml  pyproject.toml  render.yaml
agent/: __init__.py  graph.py
agent/nodes/: account.py  expense.py  (+2 more)
api/: config.py  llm_client.py  logging_utils.py  main.py  schemas.py  session.py
contrib/: __init__.py  api_v1.py  assist_util.py  audio_service.py  crowd_auth.py  db.py  export_util.py  media_util.py  models.py  object_store.py  replies.py  routes.py  stt.py  translate_view.py
data/: README.md
docs/: architecture-crowd.md  architecture.md  auth-password-idp.md  chat-security.md  contrib-deploy.md  critical-params.md  inconsistencies.md  model-ops.md  open-questions.md  roadmap.md  security.md  steps-1-2.md
eval/: test_suite.jsonl
guardrail/: __init__.py  domain.py
rag/: chunking.py  embeddings.py  retriever.py
scripts/: backfill_assistant_text.py  bootstrap_llm.sh  build_contribute_assist.py  export_mru_locale_jsonl.py  import_banking_datasets.py  index_faq.py  keycloak_token.py  migrate_audio_blobs_to_assets.py  review_imported_sample.py  run_eval.py  seed_contrib_queue.py  smoke_chat.py  test_voice_roundtrip.py  validate_dataset.py
tests/: test_argon2.py  test_chat_safety.py  test_oidc_claims.py  test_security.py  test_wallet_db.py
training/: __init__.py  export_model.py  train_qlora.py
wallet/: __init__.py  db.py  models.py  passwords.py  routes.py  service.py
web/: .vercelignore  README.md  next.config.ts  package-lock.json  package.json
(+80 files in other folders)
